objects/SPForecasting__c.object
<CustomObject>
    <description>Silver Peak Custom Forecasting Object</description>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Rev Physical Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <label>Fiscal Period</label>
        <picklist>
            <picklistValues>
                <fullName>2010Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FollowOnAmount__c</fullName>
        <label>Follow On Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Renewal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewAmount__c</fullName>
        <label>New Rev Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewVirtualAmount__c</fullName>
        <label>New Rev Virtual Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forecasting</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Forecasting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Fiscal_Period__c</columns>
        <columns>Amount__c</columns>
        <columns>MRAmount__c</columns>
        <columns>Type__c</columns>
        <columns>User__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPF-{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>